--- a/sass/components/_company.scss
+++ b/sass/components/_company.scss
@@ -3,10 +3,6 @@
     flex-basis: calc((100% - 30px) / 2 );
 }
 
-.list_320 {
-    margin: 0 auto;
-}
-
 .company__link {
     display: block;
     text-align: center;
@@ -24,26 +20,25 @@
         margin: 0;
     }
 }
+
 .company__link:hover .company__logo,
 .company__link:focus .company__logo {
-    display: inline-block;
     fill:var(--color-hover);
 }
+
+
 .company__logo {
     fill: var(--color-svg);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);   
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 480px) {
-    .company__list {
+    .company {
         display:flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
-    .company__list {
-        margin: 0;
-    }
-    .list_320 {
+    .company {
         margin: 0;
     }
 }
