--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,13 +2,13 @@
     background:#2F303A;
     padding: 60px 0;
     }
-    .footer__contact {
+    .addres__list {
         display: block;
         line-height: 24px;
         margin-top: 9px;
         padding: 0;
     }
-    .footer__contact-link {
+    .address__link {
         color:var(--color-silver);
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         &:hover, &:focus {
@@ -21,7 +21,7 @@
     .footer__social {
         margin-bottom: 60px;
     }
-    .footer__social-item {
+    .footer__social__item {
         background-color: #44454e;
         border-radius:50%;
         margin-right: 10px;
@@ -29,7 +29,7 @@
             margin-right: 0;
         }
     }
-    .footer__social-link {
+    .footer__social__link {
         display: block;
         padding: 12px;
         border-radius:50%;
@@ -39,7 +39,7 @@
             background-color:var(--color-hover);
         }
     }
-    .footer__social-logo {
+    .footer__social__logo {
         fill: var(--color-white);
         display: block; 
     }
@@ -54,10 +54,11 @@
     text-decoration: none;
     margin: 0;
     color:var(--color-white);
-    .footer__logo-color {
+    &-color {
         color:var(--color-hover);
     }
 }
+
  .footer__title {
     color: var(--color-white);
     letter-spacing: 1px;
@@ -67,19 +68,22 @@
     text-transform: uppercase;
     text-align: center;
 }  
+
  .footer__info {
     text-align: center;
     margin-bottom: 60px;
 }
- .footer__row {
+
+ .container__row {
     display: flex;
     flex-direction: column;
     align-items:center;
 }
+
 .address {
     font-style: normal;
     margin-top: 20px;
-    .address-current {
+    .address__current {
         margin: 0;
         color:var(--color-white);
     }
@@ -128,7 +132,7 @@
 }
 
 @media screen and (min-width:768px) {
-    .footer__row {
+    .container__row {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
@@ -141,7 +145,7 @@
     
 
 @media screen and (min-width:1200px) {
-    .footer__row {
+    .container__row {
         justify-content: flex-start
     }
     .footer__logo {
@@ -155,7 +159,7 @@
         margin-left:12px;
         margin-top: 0;
     }
-    .footer__row {
+    .container__row {
         align-items:baseline;
     }
     .footer__info {
@@ -180,4 +184,3 @@
         width: 358px;
     }
 }
-
