--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,15 +1,9 @@
-.filter__list {
+.filter {
     display: flex;
     justify-content: left;
     flex-wrap: wrap;
     margin-bottom: 40px;
-    .filter__option {
-        margin-right:8px;
-        margin-top: 15px;
-        &:nth-child(5) {
-            margin:15px 0 0 0;
-        }
-    }
+    
     .filter__button {
         font-weight: 500;
         font-size: 16px;
@@ -21,15 +15,22 @@
         border: none;
         text-transform: capitalize;
         cursor: pointer;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
         &:hover,
         &:focus {
             background: var(--color-hover);
             color: var(--color-white);
-            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
             box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 
         }
+    }
+}
+
+.filter__item {
+    margin-right:8px;
+    margin-top: 15px;
+    &:nth-child(5) {
+        margin:15px 0 0 0;
     }
 }
 
@@ -100,14 +101,14 @@
 
 
 @media screen and (min-width:768px) {
-    .filter__list {
+    .filter {
         justify-content: center;
         margin-bottom: 40px; 
     }
-    .filter__option {
+    .filter__item {
         margin-top: 0;
     }
-    .portfolio__list {
+    .portfolio {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
@@ -121,7 +122,7 @@
 }
 
 @media screen and (min-width:1200px) {
-    .filter__list {
+    .filter {
         margin-bottom: 50px; 
     }
     .portfolio__item {
