--- a/sass/components/_warranty.scss
+++ b/sass/components/_warranty.scss
@@ -1,32 +1,35 @@
-.warranty {
-    box-sizing: border-box; 
-    .warranty__advantage {
-        max-width: 450px;
-        letter-spacing: 0.04em;
-        margin-bottom: 30px;
-    }
-    .warranty__icons {
-        background: #F5F4FA;
-        text-align: center;
-        padding:21px 0 25px 0;
-        border-radius: 4px;
-        margin-bottom: 30px;
-    }
-    .warranty__icons-diagram {
-        padding:33.2px 0 33.11px 0;
-    }
-    .warranty__text {
-        font-size:14px;
-        line-height:24px;
-        color:var(--color-silver);
-    }
+.warranty__advantage {
+    max-width: 450px;
+    letter-spacing: 0.04em;
+    margin-bottom: 30px;
 }
-.section-text {
+.warranty__icons {
+    background: #F5F4FA;
     text-align: center;
+    padding:21px 0 25px 0;
+    border-radius: 4px;
+    margin-bottom: 30px;
+}
+.warranty__icons-diagram {
+    padding:33.2px 0 33.11px 0;
+}
+.warranty__text {
+    font-size:14px;
+    line-height:24px;
+    text-transform: inherit;
+    color:var(--color-silver);
+    font-weight: 400;
+}
+
+.warranty__title {
+    font-size: 14px;
+    text-align: center;
+    text-transform: uppercase;
+    color:var(--color-text);
 }
 
 @media screen and (min-width: 768px) {
-    .warranty__list {
+    .warranty {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -34,13 +37,13 @@
     .warranty__advantage {
         flex-basis: calc((100% - 30px) / 2);
     }
-    .section-text {
+    .warranty__text, .warranty__title {
         text-align: left;
     }
 }
 
 @media screen and (min-width: 1200px) {
-    .warranty__list {
+    .warranty {
         justify-content: space-between;
     }
     .warranty__advantage {
