--- a/css/main.css
+++ b/css/main.css
@@ -590,7 +590,7 @@ form {
 
 .mobile-contacts__link {
   font-weight: 500;
-  font-size: 34px;
+  font-size: 25px;
   line-height: 28px;
   letter-spacing: 0.02em;
   text-decoration: none;
@@ -599,6 +599,12 @@ form {
 
 .mobile-contacts__link:nth-child(2) {
   color: black;
+}
+
+@media screen and (min-width: 400px) {
+  .mobile-contacts__link {
+    font-size: 34px;
+  }
 }
 
 .mobile-contacts__link-email {
@@ -621,6 +627,11 @@ form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .mobile-media__link {
@@ -1522,10 +1533,6 @@ form {
 .filter__item {
   margin-right: 8px;
   margin-top: 15px;
-}
-
-.filter__item:nth-child(5) {
-  margin: 15px 0 0 0;
 }
 
 .portfolio__item {
